samples/_failures_safe/1761472975_5f05e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73fea4d8.c: In function ‘main’:
./samples/SAFE/__tmp_73fea4d8.c:176:9: error: expected declaration or statement at end of input
  176 |         token_count++;
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_73fea4d8.c:176:9: error: expected declaration or statement at end of input
